@@ -1,31 +1,41 @@
 package com.oneclickvideo.service;
 
+import com.oneclickvideo.config.OneClickVideoProperties;
 import org.springframework.stereotype.Service;
-import org.apache.commons.io.FileUtils;
 
 import javax.imageio.ImageIO;
-import java.awt.*;
+import java.awt.Color;
+import java.awt.Font;
+import java.awt.FontMetrics;
+import java.awt.GradientPaint;
+import java.awt.Graphics2D;
+import java.awt.RenderingHints;
 import java.awt.image.BufferedImage;
+import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStreamReader;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
+import java.util.concurrent.TimeUnit;
 
 /**
  * Video Service for One Click Video Generator
- * 
- * Generates riding-themed videos with safety-focused content
- * Creates 30-second videos with animated text and graphics
+ *
+ * Generates riding-themed videos with safety-focused content.
  */
 @Service
 public class VideoService {
-    
-    // Predefined riding stories for video content
+
+    private static final DateTimeFormatter FILE_TIMESTAMP = DateTimeFormatter.ofPattern("yyyyMMdd-HHmmss");
+
     private final List<String> ridingStories = Arrays.asList(
         "Alex gears up for mountain trail adventure! Helmet on, knee pads secure. Safety first!",
         "BMX tricks time! Watch our rider perform safe stunts with proper protective gear.",
@@ -38,11 +48,10 @@ public class VideoService {
         "Night riding safety! Headlights, reflective gear, and proper trail navigation.",
         "Mountain summit challenge! Uphill climb with determination and downhill thrill ride."
     );
-    
-    // Predefined video titles (these become the filenames)
+
     private final List<String> videoTitles = Arrays.asList(
         "Epic Mountain Trail Adventure - Kids Bike Safety",
-        "BMX Tricks and Stunts - Safe Riding for Kids", 
+        "BMX Tricks and Stunts - Safe Riding for Kids",
         "Forest Trail Challenge - Mountain Biking Fun",
         "Pump Track Mastery - Kids Bike Skills",
         "Dirt Jumping Adventure - Safe Stunts for Kids",
@@ -52,313 +61,187 @@ public class VideoService {
         "Night Riding Adventure - Kids Bike Safety",
         "Mountain Summit Challenge - Kids Adventure"
     );
-    
-    /**
-     * Generate a complete riding video
-     * 
-     * @return File object representing the generated video
-     * @throws IOException if video generation fails
-     */
+
+    private final OneClickVideoProperties properties;
+    private final Random random;
+
+    public VideoService(OneClickVideoProperties properties) {
+        this(properties, new Random());
+    }
+
+    VideoService(OneClickVideoProperties properties, Random random) {
+        this.properties = properties;
+        this.random = random;
+    }
+
     public File generateRidingVideo() throws IOException {
-        // Create output directory
-        String outputDir = "./generated-videos/";
-        Files.createDirectories(Paths.get(outputDir));
-        
-        // Get random title and story
-        Random random = new Random();
+        OneClickVideoProperties.Video videoProps = properties.getVideo();
+        Path outputDir = Path.of(videoProps.getOutputDir()).normalize();
+        Files.createDirectories(outputDir);
+
         String title = videoTitles.get(random.nextInt(videoTitles.size()));
         String story = ridingStories.get(random.nextInt(ridingStories.size()));
-        
-        // Create filename from title (remove special characters for file system compatibility)
-        String filename = title.replaceAll("[^a-zA-Z0-9\\s-]", "").replaceAll("\\s+", " ") + ".mp4";
-        String filePath = outputDir + filename;
-        
-        System.out.println("📝 Generating video: " + title);
-        System.out.println("📖 Story: " + story);
-        
-        // Create actual video file
-        createVideoFile(filePath, title, story);
-        
-        return new File(filePath);
+        String filename = buildFilename(title);
+        Path outputPath = outputDir.resolve(filename);
+
+        System.out.println("Generating video: " + title);
+        System.out.println("Story: " + story);
+
+        createVideoFile(outputPath, title, story);
+        return outputPath.toFile();
     }
-    
-    /**
-     * Create actual video file with frames
-     * 
-     * @param filePath Path where to save the video
-     * @param title Video title
-     * @param story Riding story content
-     * @throws IOException if file creation fails
-     */
-    private void createVideoFile(String filePath, String title, String story) throws IOException {
-        // Create 30 frames (1 second each for 30-second video)
-        List<BufferedImage> frames = new java.util.ArrayList<>();
-        
-        for (int i = 0; i < 30; i++) {
-            BufferedImage frame = createFrame(title, story, i);
-            frames.add(frame);
+
+    private String buildFilename(String title) {
+        String sanitizedTitle = title.replaceAll("[^a-zA-Z0-9\\s-]", "").trim().replaceAll("\\s+", "-");
+        String timestamp = LocalDateTime.now().format(FILE_TIMESTAMP);
+        return sanitizedTitle + "-" + timestamp + ".mp4";
+    }
+
+    private void createVideoFile(Path filePath, String title, String story) throws IOException {
+        List<BufferedImage> frames = new ArrayList<>();
+        int frameCount = properties.getVideo().getDuration();
+
+        for (int i = 0; i < frameCount; i++) {
+            frames.add(createFrame(title, story, i, frameCount));
         }
-        
-        // Save frames as image sequence (for now - can be enhanced to actual video later)
-        saveFramesAsImages(frames, filePath);
+
+        saveFramesAndEncodeVideo(frames, filePath);
     }
-    
-    /**
-     * Create individual frame with animated content
-     * 
-     * @param title Video title
-     * @param story Riding story
-     * @param frameNumber Current frame number (0-29)
-     * @return BufferedImage representing the frame
-     */
-    private BufferedImage createFrame(String title, String story, int frameNumber) {
-        BufferedImage frame = new BufferedImage(1920, 1080, BufferedImage.TYPE_INT_RGB);
+
+    private BufferedImage createFrame(String title, String story, int frameNumber, int frameCount) {
+        OneClickVideoProperties.Video videoProps = properties.getVideo();
+        int width = videoProps.getWidth();
+        int height = videoProps.getHeight();
+
+        BufferedImage frame = new BufferedImage(width, height, BufferedImage.TYPE_INT_RGB);
         Graphics2D g2d = frame.createGraphics();
-        
-        // Enable anti-aliasing for better text quality
+
         g2d.setRenderingHint(RenderingHints.KEY_ANTIALIASING, RenderingHints.VALUE_ANTIALIAS_ON);
         g2d.setRenderingHint(RenderingHints.KEY_TEXT_ANTIALIASING, RenderingHints.VALUE_TEXT_ANTIALIAS_ON);
-        
-        // Set background gradient (sky blue to steel blue)
+
         GradientPaint gradient = new GradientPaint(
-            0, 0, new Color(135, 206, 235), // Sky blue
-            1920, 1080, new Color(70, 130, 180) // Steel blue
+            0, 0, new Color(135, 206, 235),
+            width, height, new Color(70, 130, 180)
         );
         g2d.setPaint(gradient);
-        g2d.fillRect(0, 0, 1920, 1080);
-        
-        // Add Riding Roney branding
+        g2d.fillRect(0, 0, width, height);
+
         g2d.setColor(Color.WHITE);
         g2d.setFont(new Font("Arial", Font.BOLD, 36));
-        g2d.drawString("🚴‍♂️ Riding Roney", 50, 100);
-        
-        // Add title
-        g2d.setColor(Color.WHITE);
+        g2d.drawString(properties.getContent().getChannelName(), 50, 100);
+
         g2d.setFont(new Font("Arial", Font.BOLD, 48));
         FontMetrics fm = g2d.getFontMetrics();
         int titleWidth = fm.stringWidth(title);
-        g2d.drawString(title, (1920 - titleWidth) / 2, 200);
-        
-        // Add story text (animated - shows different parts over time)
+        g2d.drawString(title, Math.max(40, (width - titleWidth) / 2), 200);
+
         g2d.setFont(new Font("Arial", Font.PLAIN, 32));
         String[] words = story.split(" ");
         int startWord = Math.max(0, frameNumber - 5);
         int endWord = Math.min(words.length, startWord + 8);
-        
-        int y = 400;
+
+        int y = Math.max(280, height / 3);
         for (int i = startWord; i < endWord; i++) {
-            if (i < words.length) {
-                g2d.drawString(words[i], 100, y);
-                y += 40;
-            }
+            g2d.drawString(words[i], 100, y);
+            y += 40;
         }
-        
-        // Add safety message
-        g2d.setFont(new Font("Arial", Font.BOLD, 28));
-        g2d.setColor(new Color(255, 255, 0)); // Yellow for emphasis
-        g2d.drawString("Safety First! Always wear protective gear!", 100, 800);
-        
-        // Add frame counter
+
+        if (properties.getContent().isSafetyFocused()) {
+            g2d.setFont(new Font("Arial", Font.BOLD, 28));
+            g2d.setColor(new Color(255, 255, 0));
+            g2d.drawString("Safety First! Always wear protective gear!", 100, height - 280);
+        }
+
         g2d.setFont(new Font("Arial", Font.PLAIN, 24));
         g2d.setColor(Color.WHITE);
-        g2d.drawString("Frame " + (frameNumber + 1) + "/30", 50, 1050);
-        
-        // Add timestamp
+        g2d.drawString("Frame " + (frameNumber + 1) + "/" + frameCount, 50, height - 30);
+
         String timestamp = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm"));
-        g2d.drawString("Generated: " + timestamp, 1500, 1050);
-        
+        g2d.drawString("Generated: " + timestamp, Math.max(50, width - 420), height - 30);
+
         g2d.dispose();
         return frame;
     }
-    
-    /**
-     * Save frames as a proper video file using FFmpeg
-     * Creates a real MP4 video that can be played in any player
-     * 
-     * @param frames List of frames to save
-     * @param filePath Path where to save the video
-     * @throws IOException if saving fails
-     */
-    private void saveFramesAsImages(List<BufferedImage> frames, String filePath) throws IOException {
-        // Save as individual PNG images in a temporary folder
-        String basePath = filePath.replace(".mp4", "");
-        File outputDir = new File(basePath + "_frames");
-        outputDir.mkdirs();
-        
-        // Save each frame as PNG
+
+    private void saveFramesAndEncodeVideo(List<BufferedImage> frames, Path filePath) throws IOException {
+        String baseName = filePath.getFileName().toString().replaceFirst("\\.mp4$", "");
+        Path framesDir = filePath.getParent().resolve(baseName + "_frames");
+        Files.createDirectories(framesDir);
+
         for (int i = 0; i < frames.size(); i++) {
-            String framePath = outputDir.getAbsolutePath() + File.separator + "frame_" + String.format("%03d", i) + ".png";
-            ImageIO.write(frames.get(i), "PNG", new File(framePath));
+            Path framePath = framesDir.resolve("frame_" + String.format("%03d", i) + ".png");
+            ImageIO.write(frames.get(i), "PNG", framePath.toFile());
         }
-        
-        // Create actual video using FFmpeg
-        createVideoWithFFmpeg(outputDir.getAbsolutePath(), filePath, frames.size());
-        
-        System.out.println("📁 Video file created: " + filePath);
-        System.out.println("📁 Frame images saved to: " + outputDir.getAbsolutePath());
-        System.out.println("📊 Frames generated: " + frames.size());
+
+        createVideoWithFFmpeg(framesDir, filePath);
+
+        System.out.println("Video file created: " + filePath);
+        System.out.println("Frame images saved to: " + framesDir);
+        System.out.println("Frames generated: " + frames.size());
     }
-    
-    /**
-     * Create actual video using FFmpeg
-     * This is how real video creation works - using FFmpeg to encode images into video
-     * 
-     * @param framesDir Directory containing the frame images
-     * @param outputPath Path where to save the final video
-     * @param frameCount Number of frames
-     * @throws IOException if video creation fails
-     */
-    private void createVideoWithFFmpeg(String framesDir, String outputPath, int frameCount) throws IOException {
+
+    private void createVideoWithFFmpeg(Path framesDir, Path outputPath) throws IOException {
+        OneClickVideoProperties.Video videoProps = properties.getVideo();
+        ProcessBuilder pb = new ProcessBuilder(
+            videoProps.getFfmpegCommand(),
+            "-y",
+            "-framerate", "1",
+            "-i", framesDir.resolve("frame_%03d.png").toString(),
+            "-c:v", "libx264",
+            "-pix_fmt", "yuv420p",
+            "-crf", "23",
+            "-preset", "medium",
+            outputPath.toString()
+        );
+        pb.redirectErrorStream(true);
+
+        System.out.println("Creating video with FFmpeg...");
+        System.out.println("Input frames: " + framesDir);
+        System.out.println("Output video: " + outputPath);
+
+        Process process;
         try {
-            // FFmpeg command to create video from image sequence
-            // This is the standard approach used by AI tools and video services
-            ProcessBuilder pb = new ProcessBuilder(
-                "ffmpeg",
-                "-y", // Overwrite output file
-                "-framerate", "1", // 1 frame per second (30 seconds for 30 frames)
-                "-i", framesDir + File.separator + "frame_%03d.png", // Input pattern
-                "-c:v", "libx264", // Video codec
-                "-pix_fmt", "yuv420p", // Pixel format for compatibility
-                "-crf", "23", // Quality setting (lower = better quality)
-                "-preset", "medium", // Encoding speed vs compression efficiency
-                outputPath
+            process = pb.start();
+        } catch (IOException e) {
+            throw new IOException(
+                "FFmpeg is required to generate MP4 output. Configure one-click-video.video.ffmpeg-command " +
+                    "or install ffmpeg on the server PATH.",
+                e
             );
-            
-            System.out.println("🎬 Creating video with FFmpeg...");
-            System.out.println("📁 Input frames: " + framesDir);
-            System.out.println("📁 Output video: " + outputPath);
-            
-            Process process = pb.start();
-            
-            // Read FFmpeg output for debugging
-            java.io.BufferedReader reader = new java.io.BufferedReader(
-                new java.io.InputStreamReader(process.getInputStream())
-            );
-            java.io.BufferedReader errorReader = new java.io.BufferedReader(
-                new java.io.InputStreamReader(process.getErrorStream())
-            );
-            
+        }
+
+        StringBuilder output = new StringBuilder();
+        try (BufferedReader reader = new BufferedReader(
+            new InputStreamReader(process.getInputStream(), StandardCharsets.UTF_8)
+        )) {
             String line;
             while ((line = reader.readLine()) != null) {
+                output.append(line).append(System.lineSeparator());
                 System.out.println("FFmpeg: " + line);
             }
-            while ((line = errorReader.readLine()) != null) {
-                System.out.println("FFmpeg Error: " + line);
-            }
-            
-            int exitCode = process.waitFor();
-            if (exitCode == 0) {
-                System.out.println("✅ Video created successfully with FFmpeg!");
-            } else {
-                System.out.println("❌ FFmpeg failed with exit code: " + exitCode);
-                // Fallback to simple MP4 creation if FFmpeg is not available
-                createFallbackVideo(framesDir, outputPath, frameCount);
-            }
-            
-        } catch (Exception e) {
-            System.out.println("⚠️ FFmpeg not available, using fallback method: " + e.getMessage());
-            // Fallback to simple MP4 creation if FFmpeg is not available
-            createFallbackVideo(framesDir, outputPath, frameCount);
         }
-    }
-    
-    /**
-     * Fallback video creation method if FFmpeg is not available
-     * Creates a simple but playable video file
-     */
-    private void createFallbackVideo(String framesDir, String outputPath, int frameCount) throws IOException {
-        System.out.println("🔄 Using fallback video creation method...");
-        
-        // Read the first frame to get dimensions
-        File firstFrame = new File(framesDir + File.separator + "frame_000.png");
-        if (!firstFrame.exists()) {
-            throw new IOException("No frames found in directory: " + framesDir);
+
+        boolean finished;
+        try {
+            finished = process.waitFor(videoProps.getFfmpegTimeoutSeconds(), TimeUnit.SECONDS);
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            process.destroyForcibly();
+            throw new IOException("Interrupted while waiting for FFmpeg to finish.", e);
         }
-        
-        BufferedImage sampleFrame = ImageIO.read(firstFrame);
-        int width = sampleFrame.getWidth();
-        int height = sampleFrame.getHeight();
-        
-        // Create a simple video file with proper structure
-        try (java.io.FileOutputStream fos = new java.io.FileOutputStream(outputPath)) {
-            // Write a basic but valid MP4 structure
-            writeBasicMP4Header(fos, width, height, frameCount);
-            
-            // Write frame data from all frames
-            for (int i = 0; i < frameCount; i++) {
-                File frameFile = new File(framesDir + File.separator + String.format("frame_%03d.png", i));
-                if (frameFile.exists()) {
-                    BufferedImage frame = ImageIO.read(frameFile);
-                    writeFrameToVideo(fos, frame);
-                }
-            }
-            
-            writeBasicMP4Footer(fos);
+
+        if (!finished) {
+            process.destroyForcibly();
+            throw new IOException("FFmpeg timed out after " + videoProps.getFfmpegTimeoutSeconds() + " seconds.");
         }
-        
-        System.out.println("✅ Fallback video created successfully!");
-    }
-    
-    /**
-     * Write basic MP4 header
-     */
-    private void writeBasicMP4Header(java.io.FileOutputStream fos, int width, int height, int frameCount) throws IOException {
-        // File Type Box (ftyp)
-        byte[] ftyp = {
-            0x00, 0x00, 0x00, 0x20, // Box size (32 bytes)
-            0x66, 0x74, 0x79, 0x70, // Box type: "ftyp"
-            0x69, 0x73, 0x6F, 0x6D, // Major brand: "isom"
-            0x00, 0x00, 0x02, 0x00, // Minor version
-            0x69, 0x73, 0x6F, 0x6D, // Compatible brand: "isom"
-            0x69, 0x73, 0x6F, 0x32, // Compatible brand: "iso2"
-            0x61, 0x76, 0x63, 0x31, // Compatible brand: "avc1"
-            0x6D, 0x70, 0x34, 0x31  // Compatible brand: "mp41"
-        };
-        fos.write(ftyp);
-        
-        // Movie Box (moov) - basic structure
-        byte[] moov = {
-            0x00, 0x00, 0x00, 0x08, // Box size (8 bytes)
-            0x6D, 0x6F, 0x6F, 0x76  // Box type: "moov"
-        };
-        fos.write(moov);
-        
-        // Media Data Box (mdat) - basic structure
-        byte[] mdat = {
-            0x00, 0x00, 0x00, 0x08, // Box size (8 bytes)
-            0x6D, 0x64, 0x61, 0x74  // Box type: "mdat"
-        };
-        fos.write(mdat);
-    }
-    
-    /**
-     * Write frame data to video file
-     */
-    private void writeFrameToVideo(java.io.FileOutputStream fos, BufferedImage frame) throws IOException {
-        // Write frame size
-        int frameSize = frame.getWidth() * frame.getHeight() * 3; // RGB data
-        fos.write((frameSize >> 24) & 0xFF);
-        fos.write((frameSize >> 16) & 0xFF);
-        fos.write((frameSize >> 8) & 0xFF);
-        fos.write(frameSize & 0xFF);
-        
-        // Write frame data (RGB)
-        for (int y = 0; y < frame.getHeight(); y++) {
-            for (int x = 0; x < frame.getWidth(); x++) {
-                int rgb = frame.getRGB(x, y);
-                fos.write((rgb >> 16) & 0xFF); // Red
-                fos.write((rgb >> 8) & 0xFF);  // Green
-                fos.write(rgb & 0xFF);         // Blue
-            }
+
+        if (process.exitValue() != 0) {
+            throw new IOException("FFmpeg failed with exit code " + process.exitValue() + "." +
+                System.lineSeparator() + output);
         }
-    }
-    
-    /**
-     * Write basic MP4 footer
-     */
-    private void writeBasicMP4Footer(java.io.FileOutputStream fos) throws IOException {
-        // Add padding to ensure file is large enough
-        byte[] padding = new byte[1024];
-        fos.write(padding);
+
+        if (!Files.exists(outputPath) || Files.size(outputPath) == 0) {
+            throw new IOException("FFmpeg reported success but no video file was created.");
+        }
     }
 }
